<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kelly_ryan.Specials">


    <TextView
        android:id="@+id/SaleAndCoupons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/Sales_and_Coupons" />



    <ScrollView
        android:id="@+id/Scroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/SaleAndCoupons">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/Sales" />


    <Button
        android:id="@+id/TreadMill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Treadmill" />
    <Button
        android:id="@+id/RR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Roadrunner" />
    <Button
        android:id="@+id/Fox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Fox" />
    <Button
        android:id="@+id/Piano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/Piano" />

        <TextView
            android:id="@+id/coupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/Coupons" />
        <Button
            android:id="@+id/FreeShipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/Free_Shipping" />
        <Button
            android:id="@+id/Fifty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/Fifty_Percent_Off" />
        <Button
            android:id="@+id/Twenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/TwentyFive_Percent_Off" />
        <Button
            android:id="@+id/Bogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/Buy_One_Roadrunner_Get_One_Free" />
        <Button
            android:id="@+id/Cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/Cart" />
    </LinearLayout>


    </ScrollView>

</RelativeLayout>
