<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kelly_ryan.Checkout">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/First_Name" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/firstName"
        android:layout_toEndOf="@+id/firstName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Last_Name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstName"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/Address"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:maxLength="10"
        android:text="@string/Phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:text="@string/Email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/creditCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:text="@string/Credit_Card"
        android:digits="1234567890"
        android:maxLength="19"
        android:inputType="number|textNoSuggestions" />

    <TextView
        android:id="@+id/csvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/creditCard"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/creditCard"
        android:text="@string/CSV" />

    <EditText
        android:id="@+id/csv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/csvText"
        android:layout_alignBottom="@+id/csvText"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/csvText"
        android:digits="1234567890"
        android:maxLength="3"
        android:ems="10"
        android:inputType="numberPassword|textNoSuggestions" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/csv"
        android:layout_marginTop="31dp"
        android:layout_toStartOf="@+id/editText9"
        android:text="@string/Place_Order" />
</RelativeLayout>
